tests/ui/embed_multiple_fields.stderr
error: fixcol-derive error: Embed param is only valid on variants with exactly one field
  --> tests/ui/embed_multiple_fields.rs:17:10
   |
17 |     Point(Point, u16),
   |          ^^^^^^^^^^^^
